Fixed the index bug when appending the rows for the dataframe with results

--- a/test_3d.ipynb
+++ b/test_3d.ipynb
@@ -23,12 +23,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "# import pylab as pl\n",
-    "# import math\n",
     "import os\n",
     "import scipy.stats as st\n",
     "import pickle\n",
-    "import seaborn as sns              # v 0.11.0\n",
+    "import seaborn as sns   \n",
     "\n",
     "#%matplotlib inline"
    ]
@@ -231,7 +229,7 @@
     "                                result['update'] = [str( data['update'])]*len(result)\n",
     "                                \n",
     "                                for index, row in result.iterrows():                                           \n",
-    "                                    all_results = all_results.append(row, ignore_index=False)                                      \n",
+    "                                    all_results = all_results.append(row, ignore_index=True)                                      \n",
     "                                compute_and_save_value(result, data)\n",
     "                            except FileNotFoundError as e:\n",
     "                                print(e)\n",
@@ -240,13 +238,6 @@
     "    save_all_dataframes_as_pickle()\n",
     "    return all_results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -857,10 +848,12 @@
     "display(all_results.head(100))\n",
     "print(len(all_results))\n",
     "\n",
-    "# fig, ax = plt.subplots(figsize=(9,5))\n",
-    "# sns.lineplot(data=all_results, x=\"update\", y=\"latency_per_operation\", ci='sd')\n",
-    "# sns.despine()\n",
-    "# plt.show()"
+    "rslt_df = dataframe[dataframe['result_algorithm'] > =='corrective']\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(9,5))\n",
+    "sns.lineplot(data=rslt_df, x=\"update\", y=\"latency_per_operation\", ci='sd')\n",
+    "sns.despine()\n",
+    "plt.show()"
    ]
   }
  ],
