Changed the name of the pickle file to not overwrite the one generated by the old script

--- a/process_and_plot_data_using_seaborn.ipynb
+++ b/process_and_plot_data_using_seaborn.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recalculate_if_saved = False\n",
+    "recalculate_if_saved = True\n",
     "repetitions = 19\n",
     "number_of_updates = 150\n",
     "algorithm_list = ['corrective', 'standard', 'preventive']\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +82,14 @@
     "    print('Saving....')\n",
     "    current_directory = os.getcwd()\n",
     "    path_results = '/saved_dataframes/'\n",
-    "    string_name = 'data_frame'\n",
-    "    pickle.dump(all_results, open(current_directory + path_results + '/single_value/dataframe_data.p' , 'wb'))\n",
+    "    string_name = 'data_frame_'\n",
+    "    pickle.dump(all_results, open(current_directory + path_results + '/single_value/dataframe_data_all.p' , 'wb'))\n",
     "    print('Saved!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,14 +142,14 @@
     "    print('Loading...')\n",
     "    path_results = '/saved_dataframes/'\n",
     "    current_directory = os.getcwd()\n",
-    "    loaded_data = pickle.load(open(current_directory + path_results + '/single_value/dataframe_data.p' , 'rb'))\n",
+    "    loaded_data = pickle.load(open(current_directory + path_results + '/single_value/dataframe_data_all.p' , 'rb'))\n",
     "    print('Loaded!')\n",
     "    return loaded_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -158,8 +158,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading...\n",
-      "Loaded!\n"
+      "Saving....\n",
+      "Saved!\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
