--- a/process_and_plot_data_published.ipynb
+++ b/process_and_plot_data_published.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recalculate_if_saved = False\n",
+    "recalculate_if_saved = True\n",
     "repetitions = 11\n",
     "number_of_updates = 150\n",
     "algorithm_list = ['corrective', 'standard', 'preventive']\n",
